--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,10 +22,10 @@ jobs:
           dotnet-version: 8.0.x
 
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet restore UnitTests/UnitTests.csproj
 
-      - name: Build project
-        run: dotnet build --no-restore
-
+      - name: Build
+        run: dotnet build UnitTests/UnitTests.csproj --no-restore
+  
       - name: Run tests
-        run: dotnet test --no-build --verbosity normal
+        run: dotnet test UnitTests/UnitTests.csproj --no-build --verbosity normal
